vlib/v/checker/tests/addr.vv
fn main() {
	a := 4
	b := __addr(a)
	assert *b == 4
}
